Add spark tmp folder.

--- a/spark1/files/spark-env.sh.template
+++ b/spark1/files/spark-env.sh.template
@@ -28,3 +28,4 @@ export SPARK_WORKER_CORES="{{ spark_env.spark_worker_cores }}"
 export SPARK_WORKER_MEMORY="{{ spark_env.spark_worker_memory }}"
 export SPARK_WORKER_PORT="{{ spark_env.spark_worker_port }}"
 export SPARK_WORKER_INSTANCES="{{ spark_env.spark_worker_instances }}"
+export SPARK_LOCAL_DIRS="{{ spark_env.spark_local_dir }}/tmp"
